# Gestao-Patio-Sambaiba

./: .gitignore  FROTA  DIAS UTEIS AUMENTO FROTA.xlsx  README.md  index.html  index.html.html
_handoff-claude/: CONTEXTO-COMPLETO.md  LEIA-PRIMEIRO.md  PROGRESSO-2026-05-12.md  PROGRESSO-2026-05-13.md  SETUP-NOVO-PC.md
backend/: .env.example  .env.test  .gitignore  README.md  pyproject.toml  requests.http
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  deps.py  exception_handlers.py  security.py  utils.py
backend/app/models/: __init__.py  catalogos.py  enums.py  frota.py  mixins.py  operacoes.py  pessoas.py
backend/app/routers/: alertas.py  alocacoes.py  auth.py  escalas.py  filas.py  health.py  importacao.py  linhas.py  manutencao.py  motoristas.py  onibus.py  patio.py  tipos_defeito.py  usuarios.py
backend/app/schemas/: __init__.py  auth.py  base.py  catalogos.py  frota.py  importacao.py  operacoes.py  patio.py  pessoas.py
backend/app/services/: __init__.py  importacao_excel.py
backend/scripts/: set_password.py
backend/tests/: api.http
database/: 01-especificacao-banco-v3.md  02-der-logico-v3.html  README.md
database/migrations/: 001-create-database.sql  002-extensions-enums.sql  003-tables-core.sql  004-tables-apoio.sql  007-seeds.sql  (+4 more)
docs/: DER_Modelo_Conceitual_Sambaiba.html  Requisitos_Gestao_Patio_v1.docx  STATUS-V3.md  V2-vs-V3-funcionalidades.md
frontend/: index.html  login.html
frontend-v3/: alertas.html  importacao.html  index.html  manutencao.html  patio.html  remanejamento.html
v2/: index.html
(+25 files in other folders)
